# ProgrammingSupplement

./: .gitignore  .vercelignore  new.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
.vercel/: project.json
api/: drift_monitor.py  index.py
components/: DriftAnalysis.tsx  DriftMonitor.tsx
my-vercel-app/: package-lock.json  package.json
my-vercel-app/api/: index.py  vercel.json
my-vercel-app/my-vercel-app/api/: index.py
my-vercel-app/my-vercel-app/src/: App.js
my-vercel-app/src/: App.js
pages/: index.tsx
pages/api/: drift-history.ts
public/: insurance_test.csv  insurance_train.csv
src/: App.css  App.js  index.css
src/components/: ModelMonitoringDashboard.css  ModelMonitoringDashboard.jsx
src/components/ui/: DriftAnalysis.jsx  alert.jsx  card.jsx
