[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "programming-supplement"
version = "0.1.0"
description = "Programming Supplement API"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.0.1"
flask-cors = "3.0.10"
numpy = "1.21.0"
pandas = "1.3.0"
werkzeug = "2.0.1" 